Se modifican configuraciones del microservicio: path y nombre

--- a/microservicio/src/main/resources/application.yaml
+++ b/microservicio/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ jasypt:
 server:
    port: 8090
    servlet:
-      context-path: /pedido
+      context-path: /orden
       session:
          timeout: 21600s
 springdoc:
