Se modifican configuraciones del Jenkinsfile y sonar-project.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,26 +1,18 @@
-#Metadatos del proyecto
-sonar.projectDesciption=wanna
-sonar.projectVersion=1.0
-sonar.java.source=1.17
-sonar.java.target=1.17
-sonar.sourceEncoding=UTF-8
-# Modules
-sonar.modules=dominio,infraestructura
-# Dominio, Infraestructura
-dominio.sonar.projectBaseDir=./microservicio/dominio/
-infraestructura.sonar.projectBaseDir=./microservicio/infraestructura/
-# Fuente y binarios
+# Informacion del proyecto
+sonar.projectKey= co.com.ceiba.adn:wanna.pablo.tabares
+sonar.projectName=CeibaADN-wanna(pablo.tabares)
+
+# Datos de los fuentes y binarios
 sonar.sources=src/main/java
 sonar.java.binaries=build/classes/java/main
 sonar.java.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
-# Fuente y binarios de los tests
+sonar.java.source=1.17
+
+# Datos de los fuentes y binarios de los tests
 sonar.tests=src/test/java
 sonar.java.test.binaries=build/classes/java/test
 sonar.java.test.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
-# Dominio, Infraestructura reportes
+
+# Envío de reportes de JUnit y Jacoco como resultado de la tarea test
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
 sonar.junit.reportPaths=build/test-results/test
-# Excepciones lombok
-config.stopBubbling=true
-lombok.addLombokGeneratedAnnotation=true
-server.port=8090
