Se agregan propiedades para la configuracion de sonar.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,25 @@
+# Informacion del Proyecto
+sonar.projectDesciption=wanna
+sonar.projectVersion=1.0
+sonar.java.source=1.17
+sonar.java.target=1.17
+sonar.sourceEncoding=UTF-8
+
+# Modules
+sonar.modules=dominio,infraestructura
+
+# Dominio, Infraestructura
+dominio.sonar.projectBaseDir=./microservicio/dominio/
+infraestructura.sonar.projectBaseDir=./microservicio/infraestructura/
+
+# Excepciones lombok
+config.stopBubbling=true
+lombok.addLombokGeneratedAnnotation=true
+
 # Datos de los fuentes y binarios
 sonar.sources=src/main/java
 sonar.java.binaries=build/classes/java/main
 sonar.java.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
-sonar.java.source=1.17
 
 # Datos de los fuentes y binarios de los tests
 sonar.tests=src/test/java
